# uffTest

./: CMakeLists.txt  CMakeSettings.json  README.md  uffTest.cpp  uffTest.h
cmake/: FindHoudiniUsd.cmake  FindPixarUsd.cmake  FindTBB.cmake  FindUsd.cmake
houdini-extra/: plugInfo.json  uffTest.json
usd-extra/: plugInfo.json
